# perpetuity

./: .env.example  .gitignore  docker-compose.yml
.gsd/: DECISIONS.md  PROJECT.md  REQUIREMENTS.md
backend/: pyproject.toml
frontend/: index.html  nginx-backend-not-found.conf  package.json  playwright.config.ts  tsconfig.build.json  (+1 more)
orchestrator/: Dockerfile  README.md  pyproject.toml
orchestrator/orchestrator/: __init__.py  attach_map.py  auth.py  auto_push.py  clone.py  config.py  encryption.py  errors.py  github_tokens.py  main.py  protocol.py  reaper.py  redis_client.py  routes_exec.py  routes_github.py  routes_projects.py  routes_sessions.py  routes_team_mirror.py  routes_ws.py  sessions.py  team_mirror.py  team_mirror_reaper.py  volume_store.py  volumes.py
orchestrator/tests/fixtures/: Dockerfile.test
orchestrator/tests/integration/: conftest.py  test_create_repository.py  test_create_repository_user_token.py  test_image_pull.py  test_reaper.py  test_redis_client.py  test_routes_exec.py  test_sessions_lifecycle.py  test_volumes.py  test_ws_attach_map.py  test_ws_bridge.py
orchestrator/tests/unit/: test_attach_map.py  test_auth.py  test_auto_push.py  test_auto_push_mode_rule.py  test_clone_to_mirror.py  test_clone_to_user_workspace.py  test_github_tokens.py  test_health.py  test_post_receive_hook_install.py  test_routes_projects_auto_push_callback.py  test_routes_projects_materialize_mirror.py  test_routes_projects_materialize_user.py  test_sessions.py  test_team_mirror.py  test_team_mirror_reaper.py
orchestrator/workspace-image/: Dockerfile
(+950 files in other folders)
