[project]
name = "orchestrator"
version = "0.1.0"
description = "Perpetuity workspace orchestrator: per-(user, team) Docker container lifecycle and tmux-durable WS terminal bridge"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "pydantic>2.0",
    "pydantic-settings<3.0.0,>=2.2.1",
    "aiodocker<1.0.0,>=0.23.0",
    "redis<6.0.0,>=5.0.0",
    "httpx<1.0.0,>=0.25.1",
    "uvicorn<1.0.0,>=0.27.0",
    "asyncpg<1.0.0,>=0.29.0",
    "cryptography<46.0.0,>=43.0.0",
]

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.0.0",
    "pytest-asyncio<1.0.0,>=0.23.0",
    "ruff<1.0.0,>=0.2.2",
    "mypy<2.0.0,>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true
exclude = ["venv", ".venv"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG001",
    "T201",
]
ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
